--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <style>
         body{
             font-family: 'Courier New', Courier, monospace;
+            
         }
     </style>
+    <script type=""></script>
 </head>
 <body>
     <h1>SIMULASI REPO GIT</h1>
